tests/should_fail/let_destructure_tuple_on_float.nv
module test
// let destructure: tuple on Float (not a tuple)
let (a, b) = 3.14
